--- a/src/CriticalInformation/CriticalInformation.csproj
+++ b/src/CriticalInformation/CriticalInformation.csproj
@@ -9,5 +9,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="10.0.3"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="10.1.4" />
+        <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="10.1.4" />
     </ItemGroup>
 </Project>
